# lite-resolver

./: CMakeLists.txt  DNSResolverConfig.cmake  resolver.cc  resolver.hh
